# smt-oversub-model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: basic.json  sweep_utilization.json  vcpu_demand_breakeven.json
configs/intra_node_pooling/: core_split_sweep.jsonc
configs/nosmt_savings_sweep/: smt_vs_nosmt_no_oversub_compare.jsonc  smt_vs_nosmt_vs_nosmt_linear_compare.jsonc  vcpu_discount_multi_oversub.jsonc  vcpu_discount_sweep.jsonc  vcpu_discount_sweep_linear.jsonc
configs/shared/: bergamo_processors.jsonc  genoa_processors.jsonc  processors.jsonc
configs/util_oversub_comparison/: util_10_pct.jsonc  util_20_pct.jsonc  util_30_pct.jsonc
configs/vcpu_demand_breakeven/: util_10.jsonc  util_10_compare_40pct_discount.jsonc  util_10_compare_50pct_discount.jsonc  util_20.jsonc  util_20_compare_40pct_discount.jsonc  util_20_compare_50pct_discount.jsonc  util_30.jsonc  util_30_compare_40pct_discount.jsonc  util_30_compare_50pct_discount.jsonc
docs/: MODELING.md  research_prompt.md  smt_nosmt_modeling_results.md
docs/analysis/: 00_modeling_setup.md  01_naive_comparison.md  02_scheduling_constraints_oversub.md  02a_resource_modeling.md  02b_oversub_savings_scaling.md  03_vcpu_demand_discount.md  (+4 more)
notebooks/: oversub_sweep.ipynb  oversub_sweep.py  smt_vs_nosmt_comparison.ipynb
smt_oversub_model/: __init__.py  __main__.py  analysis.py  cli.py  config.py  declarative.py  formatter.py  model.py  output.py  plot.py  runner.py  sweep.py  test_declarative.py  test_model.py
tools/: generate_mixed_fleet_analysis.py  generate_scheduling_input_sensitivity.py
(+131 files in other folders)
